--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
-/* Sets all the text color to red! */
-body {
-    color: red;
+div:not(.CodeMirror-activeline) > .CodeMirror-line .cm-string.cm-url:not(.cm-formatting) {
+  font-size: 0;
+}
+div:not(.CodeMirror-activeline) > .CodeMirror-line .cm-string.cm-url:not(.cm-formatting)::after {
+  content: '🔗';
+  font-size: 1rem;
 }
